--- a/src/styles/modules/_site-header.scss
+++ b/src/styles/modules/_site-header.scss
@@ -70,7 +70,7 @@ $sh_sticky-transition-time: 500ms;
   @include atSmall{
     /*spacing*/
     margin-top: 3rem;
-    margin-bottom: 7rem;
+    // margin-bottom: 7rem;
   }
 
 
